--- a/templates/etc/init.d/debian_redis-sentinel.erb
+++ b/templates/etc/init.d/debian_redis-sentinel.erb
@@ -13,7 +13,7 @@
 
 REDIS_EXEC="<%= @redis_install_dir %>/redis-sentinel"
 REDIS_NAME="redis-sentinel_<%= @sentinel_name %>"
-REDIS_PID="/var/run/redis.pid"
+REDIS_PID="/var/run/redis-sentinel_<%= @sentinel_name %>.pid"
 REDIS_LOCKFILE="/var/lock/redis-sentinel_<%= @sentinel_name %>"
 REDIS_CONF_FILE="/etc/redis-sentinel_<%= @sentinel_name %>.conf"
 
