--- a/templates/etc/redis.conf.erb
+++ b/templates/etc/redis.conf.erb
@@ -84,9 +84,15 @@ databases <%= @redis_nr_dbs %>
 #
 #   Note: you can disable saving at all commenting all the "save" lines.
 
+<% if @redis_master -%>
+#save 900 1
+#save 300 10
+#save 60 10000
+<% else -%>
 save 900 1
 save 300 10
 save 60 10000
+<% end -%>
 
 # Compress string objects using LZF when dump .rdb databases?
 # For default that's set to 'yes' as it's almost always a win.
