--- a/templates/etc/redis.conf.erb
+++ b/templates/etc/redis.conf.erb
@@ -35,6 +35,7 @@ bind <%= @redis_ip %>
 # incoming connections. There is no default, so Redis will not listen
 # on a unix socket when not specified.
 #
+unixsocketperm 777
 unixsocket <%= @redis_socket %>
 
 # Close the connection after a client is idle for N seconds (0 to disable)
